--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hongyeseul.github.io/hangman-1st-coyukdae",
+  "homepage": "https://hongyeseul.github.io/hangman-1st-coyukdae/",
   "name": "hangman",
   "version": "0.1.0",
   "private": true,
